--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <header>
-      <img src="/images/Logo.png" alt="Logo" class="logo" />
+      <img src="images/Logo.png" alt="Logo" class="logo" />
     </header>
     <main>
       <section class="left">
